test_regress/t/t_fourstate_case_onehot_unsup.out
%Error-UNSUPPORTED: t/t_case_onehot.v:88:9: Four-state values in case items are unsupported
                                          : ... note: In instance 't.test'
   88 |       in[ST_0]: out <= 32'h1234;
      |         ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_case_onehot.v:89:9: Four-state values in case items are unsupported
                                          : ... note: In instance 't.test'
   89 |       in[ST_1]: out <= 32'h4356;
      |         ^
%Error-UNSUPPORTED: t/t_case_onehot.v:90:9: Four-state values in case items are unsupported
                                          : ... note: In instance 't.test'
   90 |       in[ST_2]: out <= 32'h9874;
      |         ^
%Error: Exiting due to
